// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDeferred > state tracking > after reject 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.reject(new Error("test"));
d.promise.catch(() => {
});
╠══════════════════════════════════════════════════╣ OUTPUTS RETURN
{
  "promise": {},
  "isResolved": false,
  "isRejected": true,
  "isSettled": true
}
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > state tracking > after resolve 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS RETURN
{
  "promise": {},
  "isResolved": true,
  "isRejected": false,
  "isSettled": true
}
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > state tracking > initial 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER

╠══════════════════════════════════════════════════╣ OUTPUTS RETURN
{
  "promise": {},
  "isResolved": false,
  "isRejected": false,
  "isSettled": false
}
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > strict > reject resolve calls throw 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.reject(new Error("test"));
d.promise.catch(() => {
});
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS THROW
Error: Deferred promise already settled
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > strict > resolve reject calls throw 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.reject(new Error("test"));
d.promise.catch(() => {
});
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS THROW
Error: Deferred promise already settled
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > strict > resolve resolve calls throw 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.resolve(1);
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS THROW
Error: Deferred promise already settled
╚══════════════════════════════════════════════════╝"
`;
